--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^3.6.95",
     "core-js": "^2.6.5",
+    "material-design-icons": "^3.0.1",
+    "roboto-fontface": "*",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuetify": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
@@ -19,6 +23,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-cli-plugin-vuetify": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
