--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@mdi/font": "^4.5.95",
+    "aws-amplify": "^1.2.2",
+    "aws-amplify-vue": "^0.3.2",
     "core-js": "^2.6.5",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
