--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-amplify": "^1.2.2",
     "aws-amplify-vue": "^0.3.2",
     "core-js": "^2.6.5",
+    "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
