--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
