--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@mdi/font": "^4.5.95",
     "aws-amplify": "^1.2.2",
     "aws-amplify-vue": "^0.3.2",
-    "core-js": "^2.6.5",
+    "axios": "^0.19.0",
+    "core-js": "^3.6.1",
+    "lodash": "^4.17.15",
     "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
+    "vue-color": "^2.7.0",
     "vue-router": "^3.0.3",
+    "vue-simple-alert": "^1.1.1",
+    "vue-snotify": "^3.2.1",
+    "vuejs-logger": "^1.5.3",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
@@ -28,12 +34,15 @@
     "@vue/cli-plugin-eslint": "^3.12.0",
     "@vue/cli-plugin-unit-jest": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
+    "@vue/eslint-config-standard": "^5.0.1",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jest": "^24.9.0",
+    "jest-junit": "^10.0.0",
     "lint-staged": "^8.1.5",
     "sass": "^1.17.4",
     "sass-loader": "^7.1.0",
