--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.15",
     "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^5.0.1",
+    "regenerator-runtime": "^0.13.3",
     "vue": "^2.6.10",
     "vue-color": "^2.7.0",
     "vue-router": "^3.0.3",
