--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^23.1.4",
     "@vue/cli-plugin-babel": "^3.12.0",
     "@vue/cli-plugin-e2e-cypress": "^3.12.0",
     "@vue/cli-plugin-eslint": "^3.12.0",
+    "@vue/cli-plugin-typescript": "^4.1.2",
     "@vue/cli-plugin-unit-jest": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
     "@vue/eslint-config-standard": "^5.0.1",
+    "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
@@ -47,6 +50,8 @@
     "lint-staged": "^8.1.5",
     "sass": "^1.17.4",
     "sass-loader": "^7.1.0",
+    "ts-jest": "^23.0.0",
+    "typescript": "~3.5.3",
     "vue-cli-plugin-vuetify": "^1.0.1",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.2"
