--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vuejs-logger": "^1.5.3",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-module-decorators": "^0.11.0"
   },
   "devDependencies": {
     "@types/jest": "^23.1.4",
