--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-snotify": "^3.2.1",
     "vuejs-logger": "^1.5.3",
     "vuelidate": "^0.7.4",
+    "vuelidate-property-decorators": "^1.0.28",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1",
     "vuex-module-decorators": "^0.11.0"
