--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
+    "noImplicitReturns": true,
     "moduleResolution": "node",
     "allowJs": true,
     "esModuleInterop": true,
